; ModuleID = '/home/carl/AnghaBench/git/extr_range-diff.c_get_filespec.c'
source_filename = "/home/carl/AnghaBench/git/extr_range-diff.c_get_filespec.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.diff_filespec = type { i8*, i32, i32*, i64, i32 }

@null_oid = common dso_local global i32 0, align 4
@section_headers = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.diff_filespec* (i8*, i8*)* @get_filespec to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.diff_filespec* @get_filespec(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.diff_filespec*, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = call %struct.diff_filespec* @alloc_filespec(i8* %6)
  store %struct.diff_filespec* %7, %struct.diff_filespec** %5, align 8
  %8 = load %struct.diff_filespec*, %struct.diff_filespec** %5, align 8
  %9 = call i32 @fill_filespec(%struct.diff_filespec* %8, i32* @null_oid, i32 0, i32 33188)
  %10 = load i8*, i8** %4, align 8
  %11 = load %struct.diff_filespec*, %struct.diff_filespec** %5, align 8
  %12 = getelementptr inbounds %struct.diff_filespec, %struct.diff_filespec* %11, i32 0, i32 0
  store i8* %10, i8** %12, align 8
  %13 = load i8*, i8** %4, align 8
  %14 = call i32 @strlen(i8* %13)
  %15 = load %struct.diff_filespec*, %struct.diff_filespec** %5, align 8
  %16 = getelementptr inbounds %struct.diff_filespec, %struct.diff_filespec* %15, i32 0, i32 4
  store i32 %14, i32* %16, align 8
  %17 = load %struct.diff_filespec*, %struct.diff_filespec** %5, align 8
  %18 = getelementptr inbounds %struct.diff_filespec, %struct.diff_filespec* %17, i32 0, i32 3
  store i64 0, i64* %18, align 8
  %19 = load %struct.diff_filespec*, %struct.diff_filespec** %5, align 8
  %20 = getelementptr inbounds %struct.diff_filespec, %struct.diff_filespec* %19, i32 0, i32 1
  store i32 1, i32* %20, align 8
  %21 = load %struct.diff_filespec*, %struct.diff_filespec** %5, align 8
  %22 = getelementptr inbounds %struct.diff_filespec, %struct.diff_filespec* %21, i32 0, i32 2
  store i32* @section_headers, i32** %22, align 8
  %23 = load %struct.diff_filespec*, %struct.diff_filespec** %5, align 8
  ret %struct.diff_filespec* %23
}

declare dso_local %struct.diff_filespec* @alloc_filespec(i8*) #1

declare dso_local i32 @fill_filespec(%struct.diff_filespec*, i32*, i32, i32) #1

declare dso_local i32 @strlen(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
